--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.5.RELEASE</version>
+		<version>2.0.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -40,8 +40,7 @@
 		   <groupId>org.apache.tomcat.embed</groupId>
 		   <artifactId>tomcat-embed-jasper</artifactId>
 		   <scope>provided</scope>
-		</dependency>
-		
+		</dependency> 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -133,25 +132,24 @@
               <artifactId>pagehelper-spring-boot-starter</artifactId>
               <version>1.2.3</version>
          </dependency>
-<!--          <dependency> -->
-<!-- 		    <groupId>org.springframework.boot</groupId> -->
-<!-- 		    <artifactId>spring-boot-starter-security</artifactId> -->
-<!-- 		</dependency> -->
+         <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 <!-- 		<dependency> -->
 <!-- 			<groupId>org.springframework.security</groupId> -->
 <!-- 			<artifactId>spring-security-test</artifactId> -->
 <!-- 			<scope>test</scope> -->
 <!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 		    <groupId>org.springframework.security</groupId> -->
-<!-- 		    <artifactId>spring-security-core</artifactId> -->
-<!-- 		    <version>5.0.0.RELEASE</version> -->
-<!-- 		 </dependency> -->
-<!--          <dependency> -->
+
+<!--        <dependency> -->
 <!--             <groupId>org.springframework.security.oauth</groupId> -->
 <!--             <artifactId>spring-security-oauth2</artifactId> -->
 <!--         </dependency> -->
-        
+<!--         <dependency> -->
+<!--             <groupId>org.springframework.security</groupId> -->
+<!--             <artifactId>spring-security-jwt</artifactId> -->
+<!--         </dependency> -->
 	</dependencies>
 
 	<build>
