--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: ${demo.port}
 spring: 
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8
@@ -29,15 +29,16 @@ spring:
         max-wait: 5 #连接池最大阻塞等待时间（使用负数表示没有限制）
         min-idle: 0 #连接池中最小的空闲连接（使用负数表示没有限制）
 logging:
-  config: classpath:logback.xml
+  config: classpath:logback-spring.xml
   path: /log  #当前盘符根目录下
   level:
-    root: WARN
+    root: INFO
     org.hibernate: INFO
+    org.hibernate.SQL: TRACE
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
-    org.hibernate.type.descriptor.sql.BasicExtractor: TRACE
+    org.hibernate.type.descriptor.sql.BasicExtractor: DEBUG
     org.springframework.security: WARN
     com.springms: DEBUG
-    com.example.demo: INFO
+    com.example.demo: DEBUG
     org.springframework.web: INFO
            
